--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www"
+    "devstart": "nodemon -e js,html ./bin/www"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -13,7 +13,7 @@
     "formidable": "^1.2.1",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
-    "adaro": "~1.0.4"
+    "mustache-express": "^1.2.8"
   },
   "devDependencies": {
     "nodemon": "^1.19.0"
